# my-Claude-Code

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: AGENTS.md  PROJECT.md  tasks.json
docs/archive/superpowers-v1/plans/: 2026-06-10-claude-md-implementation.md
docs/archive/superpowers-v1/specs/: 2026-06-10-claude-md-workflow-design.md
references/s01_agent_loop/: main.py
references/s02_tool_use/: main.py
references/s05_todo_write/: main.py
references/s06_subagent/: main.py
references/s07_skill_loading/: main.py
references/s08_context_compact/: main.py
references/s09_memory/: main.py
src/agent_flow/: __init__.py  __main__.py
src/agent_flow/core/: __init__.py  agent_loop.py  builtin_tools.py  events.py  messages.py  providers.py  tools.py  types.py
src/agent_flow/tui/: __init__.py  app.py
tests/: test_agent_loop.py  test_builtin_tools.py  test_core_models.py  test_fake_provider.py  test_mimo_provider.py  test_package.py  test_tool_registry.py  test_tui.py
